[gd_scene load_steps=16 format=2]

[ext_resource path="res://UI/FontLarge.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/FontMedium.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/Screens/TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://HoverOffsetEffect.gd" type="Script" id=4]
[ext_resource path="res://UI/MainUITheme.tres" type="Theme" id=5]
[ext_resource path="res://title_background.png" type="Texture" id=6]
[ext_resource path="res://Enemies/RobotGround/robot_ground.png" type="Texture" id=7]
[ext_resource path="res://Enemies/RobotGround/robot_ground_dead.png" type="Texture" id=8]
[ext_resource path="res://Enemies/RobotGround/robot_ground_head.png" type="Texture" id=9]
[ext_resource path="res://Enemies/RobotFlying/robot_flying.png" type="Texture" id=10]
[ext_resource path="res://TitleTheme.wav" type="AudioStream" id=11]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("RobotFlying:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "flying"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RobotFlying:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TitleMusic:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -8.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "transition"
tracks/0/type = "value"
tracks/0/path = NodePath("TitleMusic:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -8.0, -80.0 ]
}

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 640.0
margin_bottom = 360.0
rect_min_size = Vector2( 4, 4 )
mouse_filter = 2
theme = ExtResource( 5 )
color = Color( 0.329412, 0.454902, 0.607843, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="BackgroundArt" type="Sprite" parent="Bg"]
texture = ExtResource( 6 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="Bg"]
margin_left = 64.0
margin_top = 32.0
margin_right = 320.0
margin_bottom = 131.0
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 1 )
text = "Tower of
Metababel"

[node name="HighScore" type="Label" parent="Bg"]
unique_name_in_owner = true
margin_left = 520.0
margin_top = 16.0
margin_right = 640.0
margin_bottom = 51.0
text = "High Score:
123456"
align = 1
autowrap = true

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 70.0
margin_top = 152.0
margin_right = 230.0
margin_bottom = 288.0
theme = ExtResource( 5 )
custom_constants/separation = 24
alignment = 1

[node name="PlayButton" type="Button" parent="Menu"]
unique_name_in_owner = true
margin_right = 160.0
margin_bottom = 56.0
rect_min_size = Vector2( 160, 56 )
focus_neighbour_right = NodePath("../../AccountInfo/LogoutButton")
focus_neighbour_bottom = NodePath("../ControlsButton")
custom_fonts/font = ExtResource( 2 )
text = "Play"

[node name="ControlsButton" type="Button" parent="Menu"]
unique_name_in_owner = true
margin_top = 80.0
margin_right = 160.0
margin_bottom = 136.0
rect_min_size = Vector2( 160, 56 )
focus_neighbour_top = NodePath("../PlayButton")
focus_neighbour_right = NodePath("../../AccountInfo/LogoutButton")
focus_neighbour_bottom = NodePath("../../AccountInfo/LogoutButton")
custom_fonts/font = ExtResource( 2 )
text = "Controls"

[node name="Props" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="RobotGround" type="Sprite" parent="Props"]
position = Vector2( 580, 283 )
texture = ExtResource( 7 )
flip_h = true
hframes = 3

[node name="RobotGroundBody" type="Sprite" parent="Props"]
position = Vector2( 409, 281 )
texture = ExtResource( 8 )
flip_h = true

[node name="RobotGroundHead" type="Sprite" parent="Props"]
position = Vector2( 382, 291 )
texture = ExtResource( 9 )
flip_h = true

[node name="RobotFlying" type="Sprite" parent="Props"]
position = Vector2( 600, 205 )
texture = ExtResource( 10 )
flip_h = true
hframes = 3
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Props/RobotFlying"]
root_node = NodePath("../..")
autoplay = "flying"
anims/RESET = SubResource( 1 )
anims/flying = SubResource( 2 )

[node name="TitleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -8.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/transition = SubResource( 4 )

[node name="AccountInfo" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Bg2" type="ColorRect" parent="AccountInfo"]
margin_left = 4.0
margin_top = 296.0
margin_right = 436.0
margin_bottom = 359.0

[node name="Bg" type="ColorRect" parent="AccountInfo"]
margin_left = 8.0
margin_top = 299.0
margin_right = 432.0
margin_bottom = 355.0
color = Color( 0, 0, 0, 1 )

[node name="AccountName" type="Label" parent="AccountInfo"]
margin_left = 16.0
margin_top = 307.0
margin_right = 328.0
margin_bottom = 342.0
text = "Signed in as 0xe1234567890abcdefABCDEFghijklGHIJKLmnopq"
autowrap = true

[node name="LogoutButton" type="Button" parent="AccountInfo"]
margin_left = 336.0
margin_top = 307.0
margin_right = 416.0
margin_bottom = 345.0
rect_min_size = Vector2( 80, 38 )
focus_neighbour_left = NodePath("../../Menu/PlayButton")
focus_neighbour_bottom = NodePath("../../Menu/PlayButton")
text = "Sign Out"

[connection signal="pressed" from="Menu/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Menu/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="AccountInfo/LogoutButton" to="." method="_on_LogoutButton_pressed"]
